# psis-misinfo-intervention-group_b

./: .gitignore  README.md
.github/workflows/: discord-notify.yml
1_docs/: REPOSITORY_GUIDE.md  REQUIREMENTS.md
2_backend/: README.md  app.db  database.py  env.example  intervention.py  main.py  pyproject.toml
2_backend/src/app/: database.py  intervention.py  main.py
2_backend/src/app/factcheck/: claude_client.py  google_client.py  models.py  parser.py  pipeline.py  prompts.py
2_backend/tests/: FactCheck_Pipeline_Test_Report.md  test_factcheck_pipeline.py
2_browser-extension/: .gitignore  build.js  content-script.js  manifest.json  onboarding.html  package-lock.json  package.json  popup.html  popup.js  posts.json  quiz_questions.json  quiz_questions.txt  tsconfig.app.json  tsconfig.json
2_browser-extension/pipeline/: geminiClient.ts  googleClient.ts  parser.ts  pipeline.ts  types.ts
2_browser-extension/src/: debug.ts
2_browser-extension/src/background/: background.js
2_browser-extension/src/content/: content-script.js
2_browser-extension/src/dashboard/: stats.ts  types.ts
2_browser-extension/src/entry/: background.ts  content-script.ts  onboarding.ts  popup.ts
2_browser-extension/src/interventions/: decision.ts  mockWording.ts  personalityFragments.ts  prompts.ts  selector.ts  types.ts  wording.ts  wordingCache.ts
2_browser-extension/src/messaging/: bridge.ts  messages.ts  wordingDelivery.ts
2_browser-extension/src/pipeline/: geminiClient.ts  mockFactCheck.ts  parser.ts  pipeline.ts  prompts.ts  types.ts
2_browser-extension/src/popup/: popup.html  popup.js
2_browser-extension/src/quiz/: config.ts  (+3 more)
3_frontend/: app.js  index.html
3_frontend/browser-extension/: .gitkeep
3_frontend/mock-data/: DESIGN.md  posts.json
3_frontend/mockup-website/: setup.bat
3_frontend/website/: .gitignore  README.md  app.js  package-lock.json  package.json
3_mockup-website/: app.js  index.html  package.json  setup.sh
3_mockup-website/mock-data/: posts.json
(+49 files in other folders)
